Small CSS fix for ToolbarButtons vertical align text

--- a/Website/Composite/styles/default/buttons.less
+++ b/Website/Composite/styles/default/buttons.less
@@ -94,6 +94,7 @@ ui|toolbarbutton {
 
 	ui|labelbody {
 		height: 18px;
+		line-height: 18px;
 	}
 
 	ui|labelbox {
